<resources>
    <string name="app_name">Geolympics</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_sports">Sports</string>

    <string name="textview">TextView</string>

    <!-- TOOLBAR -->
    <string name="title_main">Welcome in Paris 2024</string>
    <string name="desc_main">Let us show you the best itinerary
to take to see all your favorite events.</string>

    <!-- CHOOSE DAY -->
    <string name="title_chooseday">Select your visit date</string>
    <string name="desc_chooseday">When would you like to see the games?</string>

    <!-- BUTTON CHOOSE DAY -->
    <string name="button_chooseday">Select sports</string>

    <!-- CHOOSE SPORTS -->
    <string name="title_sport">Select your favorite sports</string>
    <string name="desc_sport">Which sports would you like to see?</string>

    <string name="button_sports">Let\'s go</string>
    <string name="let_s_go_swimming_competition">Let\'s go, swimming competition!</string>


    <string name="title_activity_events">EventsActivity</string>

    <!-- CHOOSE EVENTS -->
    <string name="title_event">Select your competitions</string>
    <string name="desc_event">Which events would you like to see?</string>

    <string name="button_event">My planning</string>
</resources>
